--- a/server/model-config.json
+++ b/server/model-config.json
@@ -15,7 +15,7 @@
   },
   "User": {
     "dataSource": "mongodb",
-    "public": true
+    "public": false 
   },
   "AccessToken": {
     "dataSource": "mongodb",
@@ -48,12 +48,20 @@
     "dataSource": "mongodb",
     "public": true 
   },
-  "LabelWidget": {
-    "dataSource": "mongodb", 
+  "Person": {
+    "dataSource": "mongodb",
     "public": true
   },
-  "InputWidget": {
-    "dataSource": "mongodb", 
+  "Project": {
+    "dataSource": "mongodb",
+    "public": true
+  },
+  "Document": {
+    "dataSource": "mongodb",
+    "public": true
+  },
+  "Form": {
+    "dataSource": "mongodb",
     "public": true
   }
 
